--- a/style.css
+++ b/style.css
@@ -1,11 +1,79 @@
 * {
-    font-size: 40px;
     font-family: 'Pacifico', cursive;
-} 
+    font-weight: 100;
+}
 
-.caja-fixed{
-    background-color: red;
-    position: fixed;
-    opacity: 0.3;
+body{
+    background-color: #000;
+}
 
+.flex-container{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap; /* para que el responsive sea mas facil */
+    justify-content: center;
+    background: #444;
+    margin: 50px 50px;
+}
+
+.form{
+    min-width: 400px;
+    flex: 1;
+    text-align: center;
+    padding: 30px;
+    order: 2;
+}
+
+.form__input{
+    width: 100%;
+    padding: 6px;
+    margin: 6px 0;
+    border: none;
+    border-bottom: 3px solid #1c7;
+    background: transparent;
+    color: white;
+    
+}
+
+.form__input:focus{
+    background: #333;
+    outline: none;
+    border-bottom: 3px solid #5ad;
+}
+
+.form textarea{
+    min-height: 150px;
+    resize: none;
+}
+
+.form-img{
+    flex: 1;
+    padding: 10px;
+    display: flex;
+    min-width: 300px;
+    max-width: 400px;
+    order: 1;
+}
+
+.img-container{
+    margin: auto;
+    padding: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    text-align: center;
+
+}
+
+.form-img img{
+    width: 80%;
+}
+
+.form input[type="submit"]{
+    background-color: #0a7;
+    border-bottom: none;
+}
+
+.form input[type="submit"]:hover{
+    background-color: rgb(13, 107, 79);
+    border-bottom: none;
 }
